<resources>

    <string name="app_name">Stock Hawk</string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="content_description_add_stock" translatable="false">Add a stock item</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_change_units" translatable="true">Change Units</string>
    <string name="symbol_search" translatable="true">Symbol Search</string>
    <string name="content_test" translatable="true">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB / MSFT / BAC / GOOG</string>
    <string name="stockStatus" translatable="false">StockStatus</string>
    <string name="data_not_available" translatable="true">Stocks data not available, possible reason:\n</string>
    <string name="string_status_ok" translatable="true">You need to add new stocks by clicking add button!</string>
    <string name="string_status_no_network" translatable="true">You need to connect to internet to retrieve stock data!</string>
    <string name="string_error_json" translatable="true">App Internal Error occurred! Sorry!</string>
    <string name="string_server_down" translatable="true">Yahoo! Server is not responding!</string>
    <string name="string_error_server" translatable="true">Parsing error! Sorry!</string>
    <string name="string_status_unknown" translatable="true">We can\'t identify the problem, try again later?</string>
    <string name="input_prefill" />
    <string name="not_found" translatable="true">Stock symbol invalid!</string>
    <string name="stock" translatable="true">Stock</string>
    <string name="empty_view_text" translatable="true">Stocks Data not available!</string>
    <string name="graph_content_description" translatable="true">Graph showing prices of the stock over time!</string>
    <string name="listview_widget" translatable="true">Listview in widget.</string>
    <string name="stock_name" translatable="true">Stock Name</string>
    <string name="stock_symbol" translatable="true">Stock Symbol</string>
    <string name="Currency" translatable="true">Currency</string>
    <string name="Earningsshare" translatable="true">Earning\'s Share</string>
    <string name="Marketcaptalization" translatable="true">Market Capitalization</string>
    <string name="Daylow" translatable="true">Day\'s low</string>
    <string name="Dayhigh" translatable="true">Day\'s high</string>
    <string name="Yearlow" translatable="true">Year\'s low</string>
    <string name="Yearhigh" translatable="true">Year\'s high</string>
    <string name="Lasttradedate" translatable="true">Last Trade Date</string>
    <string name="stock_added" translatable="false">"This stock is already saved!"</string>
</resources>
